# agent-bash-parsing

./: README.md  pyproject.toml  readonly_bash_hook.py  readonly_bash_hook_briefing.md
readonly_bash_hook/: __init__.py  __main__.py  config.py  handlers.py  output.py  parser.py  pipeline.py
tests/: conftest.py  test_config.py  test_e2e_subprocess.py  test_event_modes.py  test_integration.py  test_parsing.py  test_preparse.py  test_security.py  test_step1_redirections.py  test_step2_normalize.py  test_step3_never_approve.py  test_step4_awk.py  test_step4_find.py  test_step4_sed.py  test_step4_xargs.py  test_step5_git.py  test_step6_whitelist.py  test_step7_default.py
